[tool.black]
line-length = 80
target-version = ['py39']
exclude = '/.*(__pycache__).*/'

[tool.setuptools]
py-modules = ["pamda"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pamda"
version = "2.4.0"
description = "Python wrapper for api use in the cave_app"
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
]
dependencies = ["type_enforced>=1.2.0",]

[project.urls]
"Homepage" = "https://github.com/connor-makowski/pamda"
"Bug Tracker" = "https://github.com/connor-makowski/pamda/issues"
"Documentation" = "https://connor-makowski.github.io/pamda/pamda/pamda.html"