[tool.black]
line-length = 80
target-version = ['py39']
exclude = '/.*(__pycache__).*/'

[tool.setuptools]
py-modules = ["pamda"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pamda"
version = "2.9.0"
description = "Functional programming for python"
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
]
dependencies = ["type_enforced>=2.1.0,<3.0.0",]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "build>=1.2.2",
    "nox>=2026.4.10",
    "nox-uv>=0.8.0",
    "pdoc>=15.0.1",
    "pytest>=9.0.3",
    "twine>=6.1.0",
]

[project.urls]
"Homepage" = "https://github.com/connor-makowski/pamda"
"Bug Tracker" = "https://github.com/connor-makowski/pamda/issues"
"Documentation" = "https://connor-makowski.github.io/pamda/pamda/pamda.html"


[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*.py"]